--- a/chrome/locale/en-US/drupalforfirebug.properties
+++ b/chrome/locale/en-US/drupalforfirebug.properties
@@ -1,1 +1,6 @@
 drupalforfirebug.panel.label=Long Live Drupal For Firebug
+toolbar.button.label=Click Me
+toolbar.button.tooltip=Click to say hello
+toolbar.msg.hello1=Hello from the Net panel!
+toolbar.msg.hello2=Hello from my panel!
+toolbar.msg.hello3=Hello from main Firebug toolbar!
