--- a/chrome/locale/en-US/drupalforfirebug.properties
+++ b/chrome/locale/en-US/drupalforfirebug.properties
@@ -1,4 +1,4 @@
-drupalforfirebug.panel.label=Long Live Drupal For Firebug
+drupalforfirebug.panel.error=No Drupal for Firebug data was found. <br /><br />Either this site is not running Drupal or the <a href='http://drupal.org/project/drupalforfirebug' >Drupal for Firebug module</a> has not been installed/enabled.
 toolbar.button.label=Click Me
 toolbar.button.tooltip=Click to say hello
 toolbar.msg.hello1=Hello from the Net panel!
