--- a/chrome/locale/en-US/drupalforfirebug.properties
+++ b/chrome/locale/en-US/drupalforfirebug.properties
@@ -1,5 +1,5 @@
 drupalforfirebug.panel.error=No Drupal for Firebug data was found. <br /><br />Either this site is not running Drupal or the <a href='http://drupal.org/project/drupalforfirebug' >Drupal for Firebug module</a> has not been installed/enabled.
-toolbar.button.label=Click Me
+toolbar.button.label=Drupal
 toolbar.button.tooltip=Click to say hello
 toolbar.button.label2=Click Me2
 toolbar.button.tooltip2=Click to say hello2
