--- a/chrome/locale/en-US/drupalforfirebug.properties
+++ b/chrome/locale/en-US/drupalforfirebug.properties
@@ -1,8 +1,2 @@
 drupalforfirebug.panel.error=No Drupal for Firebug data was found. <br /><br />Either this site is not running Drupal or the <a href='http://drupal.org/project/drupalforfirebug' >Drupal for Firebug module</a> has not been installed/enabled.
-toolbar.button.label=Drupal
-toolbar.button.tooltip=Click to say hello
-toolbar.button.label2=Click Me2
-toolbar.button.tooltip2=Click to say hello2
-toolbar.msg.hello1=Hello from the Net panel!
-toolbar.msg.hello2=Hello from my panel!
-toolbar.msg.hello3=Hello from main Firebug toolbar!
+drupalforfirebug.toolbar.button.label=Drupal
