Issue #2182503: Following "Drupal for Firebug module" link breaks Firebug UI

--- a/src/chrome/locale/en-US/drupalforfirebug.properties
+++ b/src/chrome/locale/en-US/drupalforfirebug.properties
@@ -1,2 +1,2 @@
-drupalforfirebug.panel.error=No Drupal for Firebug data was found. <br /><br />Either this site is not running Drupal or the <a href='http://drupal.org/project/drupalforfirebug' >Drupal for Firebug module</a> has not been installed/enabled.
+drupalforfirebug.panel.error=No Drupal for Firebug data was found. <br /><br />Either this site is not running Drupal or the <a href='http://drupal.org/project/drupalforfirebug' target='_blank'>Drupal for Firebug module</a> has not been installed/enabled.
 drupalforfirebug.toolbar.button.label=Drupal
